Change words (movie) to (music). Redirect localhost:5000 to 127.0.0.1:5000 in order to fix login cookie error.

--- a/view/login.html
+++ b/view/login.html
@@ -120,9 +120,14 @@
                                 if (data.status === 'success') {
                                     correct_dialog.call(this, '操作成功');
                                     localStorage.setItem('username', this.loginForm.username);
-                                    window.location.href = 'recommend.html';
+                                    setTimeout(() => {
+                                        window.location.href = 'recommend.html';
+                                    }, 3000);
                                 } else {
                                     error_dialog.call(this, '登录失败: ' + data.message);
+                                    setTimeout(() => {
+                                        window.location.href = 'login.html';
+                                    }, 3000);
                                 }
                             })
                     }
